bump spec version, JAF 2.0.0, fixup module name
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>